added noscript message that displays if javascript is disabled.

--- a/web/tmpl/header.tmpl
+++ b/web/tmpl/header.tmpl
@@ -159,3 +159,4 @@ function animate_section(name, style, speedy) {
   </TD>-->
  </TR>
 </TABLE>
+<noscript>We have detected that your browser currently has JavaScript disabled. In order for CoGe to function properly, JavaScript must be enabled in your browser. For instruction on how to do so in Mozilla Firefox, please click <a href="http://www.mozilla.org/support/firefox/options#content" target="_blank">here</a>. After enabling JavaScript, simply refresh the page, or click <a href="javascript:location.reload(true);" target="_self">here</a>.</noscript>
