added update message for system update

--- a/web/tmpl/index.tmpl
+++ b/web/tmpl/index.tmpl
@@ -190,4 +190,10 @@ function show_summary(id) {
 </TMPL_LOOP>
 </TABLE>
 </TMPL_IF>
+
+<TMPL_IF NAME=UPDATE>
+The CoGe System is undergoing an update.  Please check back in a few hours.
+
+</TMPL_IF>
+
 </div>
