added cursor style to help

--- a/web/tmpl/GEvo.tmpl
+++ b/web/tmpl/GEvo.tmpl
@@ -425,7 +425,7 @@ function monitor_log(log)
       </select>
    </TD>
    <TD>
-   <font class="xsmall help"></font>
+   <font class="xsmall help" style="cursor: help"></font>
    </TD>
  </TR>
    </Table>    
