updated save settings

--- a/web/tmpl/GEvo.tmpl
+++ b/web/tmpl/GEvo.tmpl
@@ -258,7 +258,7 @@ num_seqs--;
 $('#num_seqs').val(num_seqs);
 gen_go_run(['num_seqs'],update_go_run);
 
-gen_hsp_colors(['num_seqs'],['hsp_colors']);
+gen_hsp_colors(['args__num_seqs','num_seqs'],['hsp_colors']);
 }
 
 function update_go_run (val){
