added TMPL_IF to save_setting options so that it is avaialbe to valid coge users only

--- a/web/tmpl/GEvo.tmpl
+++ b/web/tmpl/GEvo.tmpl
@@ -841,8 +841,10 @@ function monitor_log(log)
   </table>
  </table>
 </div>
+<TMPL_IF NAME=SAVE_SETTINGS>
 <input type=button value="Save Settings" name="SaveSettings" id="SaveSettings" onclick="<TMPL_VAR NAME="SAVE_SETTINGS">">
 <input type=button value="Reset Settings" name="ResetSettings" id="ResetSettings" onclick="reset_settings_gevo([],[]);window.location.reload()">
+</TMPL_IF>
 </TABLE>
 
 
