--- a/web/tmpl/SeqView.tmpl
+++ b/web/tmpl/SeqView.tmpl
@@ -13,9 +13,9 @@ $('#maketable').html('<div id ="annotation" style = "overflow: auto; height: 300
 //$('#feat_annos').toggle(0);
   var featid = <TMPL_VAR NAME=FEATID>;
   if (featid){
-  myObj = new generate_seq_obj(<TMPL_VAR NAME=DSID>,<TMPL_VAR NAME=CHR>,featid,'<TMPL_VAR NAME=FEATNAME>');}
+  myObj = new generate_seq_obj(<TMPL_VAR NAME=DSID>,'<TMPL_VAR NAME=CHR>',featid,'<TMPL_VAR NAME=FEATNAME>');}
   else{
-  myObj = new generate_seq_obj(<TMPL_VAR NAME=DSID>,<TMPL_VAR NAME=CHR>);}
+  myObj = new generate_seq_obj(<TMPL_VAR NAME=DSID>,'<TMPL_VAR NAME=CHR>');}
   get_sequence();
 });
 
