--- a/web/tmpl/GenomeView.tmpl
+++ b/web/tmpl/GenomeView.tmpl
@@ -47,7 +47,7 @@
         var bp;
         var size= 285;
         var server = 'tiler.pl?'
-        var org = '<TMPL_VAR NAME=ORG>';
+        var org = "<TMPL_VAR NAME=ORG>";
         var ds = '<TMPL_VAR NAME=DS>';
         var loc = '<TMPL_VAR NAME=LOC>';
         var zoom = '<TMPL_VAR NAME=ZOOM>';
