--- a/web/tmpl/GEvo.tmpl
+++ b/web/tmpl/GEvo.tmpl
@@ -1,6 +1,6 @@
 <TMPL_IF NAME=SEQ_RETRIEVAL>
 <HTML>
-<HEAD no-cache>
+<HEAD>
  <TITLE><TMPL_VAR NAME=TITLE></TITLE>
  <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 </HEAD>
