added a head meta tage for no cache

--- a/web/tmpl/header.tmpl
+++ b/web/tmpl/header.tmpl
@@ -1,5 +1,6 @@
 <HTML>
 <HEAD>
+<meta http-equiv="Pragma" content="no-cache">
  <TITLE><TMPL_VAR NAME=TITLE></TITLE>
  <link rel="stylesheet" type="text/css" href="/CoGe/css/styled.css" />
 
