correct hard link to toxic to be relative to CoGe

--- a/web/tmpl/header.tmpl
+++ b/web/tmpl/header.tmpl
@@ -109,7 +109,7 @@ function animate_section(name, style, speedy) {
   </TD>
   <TD align=left>
 	<ul class="jd_menu jd_menu_slate" style="position: absolute;right: 0px;top: 0px;">
-	 <li><a href="http://toxic.berkeley.edu/CoGe/" target="_self">Home</a></li>
+	 <li><a href="/CoGe/" target="_self">Home</a></li>
 	 <li>Applications
 	  <ul>
 	  <li><a href="/CoGe/GEvo.pl" target="_self">GEvo</a></li>
@@ -117,8 +117,9 @@ function animate_section(name, style, speedy) {
 	  <li><a href="/CoGe/MSAView.pl" target="_self">MSAView</a></li>
 	  <li><a href="/CoGe/TreeView.pl" target="_self">TreeView</a></li>
 	  <li><a href="/CoGe/GeLo.pl" target="_self">GeLoView</a></li>
-	  <li><a href="/CoGe/CoGeBlast.pl" target="_self">CoGeBlast</a></li>
-	  </ul>
+<!--	  <li><a href="/CoGe/CoGeBlast.pl" target="_self">CoGeBlast</a></li>
+-->
+      </ul>
 	</li>
 	<li>User Stuff
 	 <ul>
