turned on the sequence filter by default

--- a/web/tmpl/GEvo.tmpl
+++ b/web/tmpl/GEvo.tmpl
@@ -458,8 +458,8 @@ function monitor_log(log)
   <TD>Filter query sequence (DUST/SEG) (-F): </TD>
   <TD>
     <select class="backbox" name="blast_filter" id="blast_filter" tabindex="1" >
-     <option value="T">Yes</option>
-     <option value="F" selected>No</option>
+     <option value="T" selected>Yes</option>
+     <option value="F">No</option>
     </select>
   </TD>
  </TR>    
