--- a/web/tmpl/FeatView.tmpl
+++ b/web/tmpl/FeatView.tmpl
@@ -119,7 +119,7 @@ $(document).ready(function(){
 	<option selected>both</option>
  	</select>
 	side(s) of the annotation.
-	<tr><td><span class=small>Note: wildcards slow search substantially</span>
+	<tr><td><span class=small>Note: wildcards may slow search substantially</span>
         <TR>
 	 <tD nowrap>
           Feature Type:
